--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v5
         with:
+          enable-cache: true
           python-version: 3.12
 
       - name: Run MyPy
