--- a/.github/workflows/docker-manual.yml
+++ b/.github/workflows/docker-manual.yml
@@ -12,7 +12,14 @@ jobs:
       TAG_VERSION: v0.2.0
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Setup up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -23,22 +30,22 @@ jobs:
     - name: Build the Docker images using Docker Compose
       run: docker compose build
 
-    - name: Push the Docker image
+    - name: Tag additional versions for trustpoint and postgres images
       run: |
         # For the trustpoint container:
-          docker tag trustpoint:$GITHUB_SHA $DOCKER_HUB_USERNAME/trustpoint:$GITHUB_SHA
-          docker tag trustpoint:$GITHUB_SHA $DOCKER_HUB_USERNAME/trustpoint:$TAG_VERSION
-          docker tag trustpoint:$GITHUB_SHA $DOCKER_HUB_USERNAME/trustpoint:latest
-
-          docker push $DOCKER_HUB_USERNAME/trustpoint:$GITHUB_SHA
-          docker push $DOCKER_HUB_USERNAME/trustpoint:$TAG_VERSION
-          docker push $DOCKER_HUB_USERNAME/trustpoint:latest
-        
+          docker tag ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/trustpoint:${TAG_VERSION}
+          docker tag ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/trustpoint:latest
         # For the postgres container:
-          docker tag postgres:$GITHUB_SHA $DOCKER_HUB_USERNAME/postgres:$GITHUB_SHA
-          docker tag postgres:$GITHUB_SHA $DOCKER_HUB_USERNAME/postgres:$TAG_VERSION
-          docker tag postgres:$GITHUB_SHA $DOCKER_HUB_USERNAME/postgres:latest
+          docker tag ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/postgres:${TAG_VERSION}
+          docker tag ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/postgres:latest
 
-          docker push $DOCKER_HUB_USERNAME/postgres:$GITHUB_SHA
-          docker push $DOCKER_HUB_USERNAME/postgres:$TAG_VERSION
-          docker push $DOCKER_HUB_USERNAME/postgres:latest
+    - name: Push docker images to Docker Hub
+      run:
+        # Push trustpoint images
+        docker push ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA}
+        docker push ${DOCKER_HUB_USERNAME}/trustpoint:${TAG_VERSION}
+        docker push ${DOCKER_HUB_USERNAME}/trustpoint:latest
+        # Push postgres images
+        docker push ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA}
+        docker push ${DOCKER_HUB_USERNAME}/postgres:${TAG_VERSION}
+        docker push ${DOCKER_HUB_USERNAME}/postgres:latest
