--- a/.github/workflows/docker-manual.yml
+++ b/.github/workflows/docker-manual.yml
@@ -33,19 +33,21 @@ jobs:
       - name: Tag additional versions for trustpoint and postgres images
         run: |
           # For the trustpoint container:
-            docker tag ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/trustpoint:${TAG_VERSION}
-            docker tag ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/trustpoint:latest
+            docker tag trustpoint_trustpoint:latest ${DOCKER_HUB_USERNAME}/trustpoint:${TAG_VERSION}
+            docker tag trustpoint_trustpoint:latest ${DOCKER_HUB_USERNAME}/trustpoint:latest
+            docker tag trustpoint_trustpoint:latest ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA}
           # For the postgres container:
-            docker tag ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/postgres:${TAG_VERSION}
-            docker tag ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA} ${DOCKER_HUB_USERNAME}/postgres:latest
+            docker tag trustpoint_postgres:latest ${DOCKER_HUB_USERNAME}/trustpoint_postgres:${TAG_VERSION}
+            docker tag trustpoint_postgres:latest ${DOCKER_HUB_USERNAME}/trustpoint_postgres:latest
+            docker tag trustpoint_postgres:latest ${DOCKER_HUB_USERNAME}/trustpoint_postgres:${GITHUB_SHA}
 
       - name: Push docker images to Docker Hub
         run: |
           # Push trustpoint images
-          docker push ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA}
           docker push ${DOCKER_HUB_USERNAME}/trustpoint:${TAG_VERSION}
           docker push ${DOCKER_HUB_USERNAME}/trustpoint:latest
+          docker push ${DOCKER_HUB_USERNAME}/trustpoint:${GITHUB_SHA}
           # Push postgres images
-          docker push ${DOCKER_HUB_USERNAME}/postgres:${GITHUB_SHA}
-          docker push ${DOCKER_HUB_USERNAME}/postgres:${TAG_VERSION}
-          docker push ${DOCKER_HUB_USERNAME}/postgres:latest
+          docker push ${DOCKER_HUB_USERNAME}/trustpoint_postgres:${TAG_VERSION}
+          docker push ${DOCKER_HUB_USERNAME}/trustpoint_postgres:latest
+          docker push ${DOCKER_HUB_USERNAME}/trustpoint_postgres:${GITHUB_SHA}
