Usage of python version stored inside pyproject.toml

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,6 @@
 name: Pytest
 
-on: [ pull_request ]
+on: [pull_request]
 
 jobs:
   pytest:
@@ -16,7 +16,12 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-          python-version: 3.12
+          version: "0.6.3"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
 
       - name: Run database migrations
         run: |
