--- a/.github/workflows/behave-test-template.yml
+++ b/.github/workflows/behave-test-template.yml
@@ -20,7 +20,12 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-          python-version: 3.12
+          version: "0.6.3"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
 
       - name: Run database migrations
         run: |
