--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,7 @@ strict = true
 plugins = ["mypy_django_plugin.main"]
 
 [[tool.mypy.overrides]]
-module = ["crispy_bootstrap5.*", "crispy_forms.*"]
+module = ["crispy_bootstrap5.*", "crispy_forms.*", "trustpoint_core.*"]
 ignore_missing_imports = true
 
 [tool.django-stubs]
