--- a/.github/workflows/behave-test-template.yml
+++ b/.github/workflows/behave-test-template.yml
@@ -1,35 +1,36 @@
 name: Behave Tests
 
+# This workflow is designed to be reusable by other workflows via `workflow_call`.
 on:
   workflow_call:
     inputs:
       feature_file:
-        description: 'Feature file to test'
-        required: true
-        type: string
+        description: 'Feature file to test'  # The specific feature file to be tested.
+        required: true  # This input is mandatory.
+        type: string  # The input type is a string.
 
 jobs:
   run-behave:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner for compatibility and performance.
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Ensures the repository code is available in the runner.
 
       - name: Install and setup uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v5  # Sets up `uv` package manager.
         with:
-          enable-cache: true
-          version: "0.6.3"
+          enable-cache: true  # Caches `uv` installation for faster runs.
+          version: "0.6.3"  # Specify a fixed version for consistency across runs.
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v5  # Sets up Python environment.
         with:
-          python-version-file: "pyproject.toml"
+          python-version-file: "pyproject.toml"  # Ensures the correct Python version is used.
 
       - name: Run database migrations
         run: |
-          echo "y" | uv run trustpoint/manage.py reset_db
+          echo "y" | uv run trustpoint/manage.py reset_db  # Resets the database before running tests.
 
       - name: Run Behave Tests and Generate HTML Report for ${{ inputs.feature_file }}.feature
         run: |
@@ -37,8 +38,8 @@ jobs:
           trustpoint/features/${{ inputs.feature_file }}.feature
 
       - name: Upload Test Report
-        uses: actions/upload-artifact@v4
-        if: always()
+        uses: actions/upload-artifact@v4  # Uploads the test report for review.
+        if: always()  # Ensures the report is uploaded even if tests fail.
         with:
-          name: ${{ inputs.feature_file }}-html-report
-          path: behave-report.html
+          name: ${{ inputs.feature_file }}-html-report  # Name report based on the feature file tested.
+          path: behave-report.html  # Ensure this file is generated correctly before uploading.
