Add environment setup workflow.

--- a/.github/workflows/behave-test-template.yml
+++ b/.github/workflows/behave-test-template.yml
@@ -10,28 +10,15 @@ on:
         type: string  # The input type is a string.
 
 jobs:
-  run-behave:
+  setup:
+    uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
+    with:
+      run_migrations: true  # Enable database migrations.
+
+  behave:
+    needs: setup  # Ensures setup runs first.
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for compatibility and performance.
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4  # Ensures the repository code is available in the runner.
-
-      - name: Install and setup uv
-        uses: astral-sh/setup-uv@v5  # Sets up `uv` package manager.
-        with:
-          enable-cache: true  # Caches `uv` installation for faster runs.
-          version: "0.6.3"  # Specify a fixed version for consistency across runs.
-
-      - name: Set up Python
-        uses: actions/setup-python@v5  # Sets up Python environment.
-        with:
-          python-version-file: "pyproject.toml"  # Ensures the correct Python version is used.
-
-      - name: Run database migrations
-        run: |
-          echo "y" | uv run trustpoint/manage.py reset_db  # Resets the database before running tests.
-
       - name: Run Behave Tests and Generate HTML Report for ${{ inputs.feature_file }}.feature
         run: |
           uv run trustpoint/manage.py behave \
