--- a/.github/workflows/codecov-upload.yml
+++ b/.github/workflows/codecov-upload.yml
@@ -4,15 +4,14 @@ name: Codecov upload
 on: [pull_request]
 
 jobs:
-  setup:
-    uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
-    with:
-      run_migrations: true  # Enable database migrations.
-
   codecov-upload:
-    needs: setup  # Ensures setup runs first.
     runs-on: ubuntu-latest # Use the latest Ubuntu runner for compatibility and performance.
     steps:
+      - name: Setup uv
+        uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
+        with:
+          run_migrations: true  # Enable database migrations.
+
       - name: Run Pytest with Coverage
         run: uv run pytest --cov=trustpoint --cov-report=xml trustpoint/
 
