--- a/.github/workflows/behave-test-template.yml
+++ b/.github/workflows/behave-test-template.yml
@@ -10,15 +10,17 @@ on:
         type: string  # The input type is a string.
 
 jobs:
-  setup:
-    uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
-    with:
-      run_migrations: true  # Enable database migrations.
-
   behave:
-    needs: setup  # Ensures setup runs first.
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for compatibility and performance.
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4  # Ensures the repository code is available.
+
+      - name: Setup uv
+        uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
+        with:
+          run_migrations: true  # Enable database migrations.
+
       - name: Run Behave Tests and Generate HTML Report for ${{ inputs.feature_file }}.feature
         run: |
           uv run trustpoint/manage.py behave \
