--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,13 +4,7 @@ name: Pytest
 on: [pull_request]
 
 jobs:
-  setup:
-    uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
-    with:
-      run_migrations: true  # Enable database migrations.
-
   pytest:
-    needs: setup  # Ensures setup runs first.
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for compatibility and performance.
 
     permissions:
@@ -18,6 +12,14 @@ jobs:
       pull-requests: write  # Allows posting test reports as comments on pull requests.
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4  # Ensures the repository code is available.
+
+      - name: Setup uv
+        uses: ./.github/workflows/setup-env.yml  # Call the reusable setup workflow.
+        with:
+          run_migrations: true  # Enable database migrations.
+
       - name: Run Pytest and create reports
         run: |
           mkdir -p reports
