--- a/.github/actions/setup-uv-action/action.yml
+++ b/.github/actions/setup-uv-action/action.yml
@@ -1,5 +1,10 @@
 name: Setup Environment
 description: Checks out code and installs the current uv version and it's dependencies defined inside the pyproject.toml file.
+inputs:
+  run_migrations:
+    description: "Boolean to run the database migrations or not."
+    required: false
+    default: "false"
 runs:
   using: "composite"
   steps:
@@ -16,7 +21,7 @@ runs:
         python-version-file: "pyproject.toml"  # Ensures the correct Python version is used.
 
     - name: Run database migrations # Resets the database before running tests.
-      if: inputs.run_migrations == true  # Only run migrations if input is true.
+      if: inputs.run_migrations == "true"  # Only run migrations if input is true.
       shell: bash
       run: |
         echo "y" | uv run trustpoint/manage.py reset_db  
