--- a/.github/actions/setup-uv-action/action.yml
+++ b/.github/actions/setup-uv-action/action.yml
@@ -21,7 +21,7 @@ runs:
         python-version-file: "pyproject.toml"  # Ensures the correct Python version is used.
 
     - name: Run database migrations # Resets the database before running tests.
-      if: inputs.run_migrations == "true"  # Only run migrations if input is true.
+      if: inputs.run_migrations == true  # Only run migrations if input is true.
       shell: bash
       run: |
         echo "y" | uv run trustpoint/manage.py reset_db  
