--- a/.github/workflows/codecov-upload.yml
+++ b/.github/workflows/codecov-upload.yml
@@ -16,7 +16,7 @@ jobs:
           run_migrations: true  # Enable database migrations.
 
       - name: Run Pytest with Coverage
-        run: uv run pytest -n 4 --cov=trustpoint --cov-report=xml trustpoint/
+        run: uv run pytest --cov=trustpoint --cov-report=xml trustpoint/
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v5
