--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 dependencies = [
     "crispy-bootstrap5~=2024.10",
     "cryptography>=44.0.1",
-    "django>=5.1.6,<6",
+    "django>=5.1.6",
     "django-crispy-forms~=2.3",
     "django-filter~=25.1",
     "django-stubs>=5.1.3,<6",
@@ -94,14 +94,10 @@ multiline-quotes = "double"
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-    "ANN401",
-    "D203", "D213", "D415",
+    "ANN401",   # Since django makes extensive use of the Any type, we are OK with using it.
+    "COM812",   # Not compatible with the formatter
+    # TODO(AlexHx8472): We should use this in the future:
     "TD003",
-    # TODO(Alex): FIX should be added again, after we are departing from the PoC phase
-    "FIX",
-    "COM812", # Not compatible with the formatter
-    "ISC001", # Not compatible with the formatter
-    "S101",
 ]
 
 [tool.ruff.format]
