--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ ignore = [
     "TD003",
 ]
 
+[tool.ruff.lint.per-file-ignores]
+"**/tests/**/**.py" = ["S101"]
+
 [tool.ruff.format]
 quote-style = "single"
 indent-style = "space"
