--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,10 @@ dev = [
     "pytest-html>=4.1.1",
     "pytest-md>=0.2.0",
     "pre-commit>=4.1.0",
-    "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "sphinx>=8.2.3",
+    "sphinx-autodoc-typehints>=3.1.0",
     "sphinxcontrib-plantuml>=0.30",
+    "ruff>=0.7.4",
     "werkzeug>=3.1.3,<4",
     "beautifulsoup4>=4.13.3",
     "pytest-md-report>=0.6.3",
@@ -71,7 +72,8 @@ dev = [
     "pytest-md>=0.2.0",
     "pre-commit>=4.1.0",
     "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "sphinx>=8.2.3",
+    "sphinx-autodoc-typehints>=3.1.0",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
     "beautifulsoup4>=4.13.3",
