--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dev = [
     "pytest-md>=0.2.0",
     "pre-commit>=4.1.0",
     "sphinx>=8.2.3",
-    "sphinx-autodoc-typehints>=3.1.0",
+    "sphinx-autoapi>=3.6.0",
     "sphinxcontrib-plantuml>=0.30",
     "ruff>=0.7.4",
     "werkzeug>=3.1.3,<4",
@@ -73,7 +73,7 @@ dev = [
     "pre-commit>=4.1.0",
     "ruff>=0.7.4",
     "sphinx>=8.2.3",
-    "sphinx-autodoc-typehints>=3.1.0",
+    "sphinx-autoapi>=3.6.0",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
     "beautifulsoup4>=4.13.3",
