--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -1,6 +1,8 @@
 name: Combined Test Report
 
-on: workflow_dispatch  # Allows manual triggering of this workflow.
+#on: workflow_dispatch  # Allows manual triggering of this workflow.
+
+on: [pull_request]
 
 jobs:
   test-report:
