--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "**/tests/**/**.py" = ["S101"]
+"**/tests.py" = ["S101"]
 
 [tool.ruff.format]
 quote-style = "single"
