Usage of another predefined action.

--- a/.github/workflows/docker-test-compose.yml
+++ b/.github/workflows/docker-test-compose.yml
@@ -5,21 +5,13 @@ on: [pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-    services: 
-      docker: 
-        image: docker:28.0.4
-        options: --privileged
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Build Docker images
-      run: |
-        docker-compose -f docker-compose.yml build
-    - name: Run Docker-compose
-      run: |
-        docker-compose -f docker-compose.yml up -d
-        docker-compose -f docker-compose.yml ps
-        sleep 30
+
+    - name: Run Docker compose
+      uses: hoverkraft-tech/compose-action@v2.2.0
+
     - name: Test Home Page with curl
       run: |
         http_response=$(curl -s -o response.txt -w "%{response_code}" http://example.com)
@@ -31,6 +23,3 @@ jobs:
           echo "This expected, the full response is:" >> $GITHUB_STEP_SUMMARY
           cat response.txt >> $GITHUB_STEP_SUMMARY
         fi
-    - name: Stop and remove containers
-      if: always()
-      run: docker-compose -f docker-compose.yml down
