--- a/.github/workflows/docker-test-compose.yml
+++ b/.github/workflows/docker-test-compose.yml
@@ -11,6 +11,9 @@ jobs:
 
     - name: Run Docker compose
       uses: hoverkraft-tech/compose-action@v2.2.0
+      with:
+        compose-file: "./docker-compose.yml"
+        up-flags: "--build --wait"
 
     - name: Test Home Page with curl
       run: |
