--- a/docker/apache/trustpoint-apache-https.conf
+++ b/docker/apache/trustpoint-apache-https.conf
@@ -12,6 +12,7 @@
     SSLCertificateKeyFile /etc/trustpoint/tls/apache-tls-server-key.key
     SSLCertificateFile /etc/trustpoint/tls/apache-tls-server-cert.pem
     SSLCertificateChainFile /etc/trustpoint/tls/apache-tls-server-cert-chain.pem
+    #SSLCACertificateFile /etc/trustpoint/tls/client-truststore.pem  # The CA used to issue client certs
 
     SSLProtocol -all +TLSv1.2 +TLSv1.3
     SSLCipherSuite      ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
@@ -23,12 +24,11 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     # if a client certificate is provided, make it available in the django environment
-    # import os
-    # client_cert = os.environ['SSL_CLIENT_CERT']
+    # client_cert = request.META.get['SSL_CLIENT_CERT']
     # this will contain the PEM encoded client certificate.
     SSLVerifyClient optional_no_ca
-    SSLVerifyDepth 1
-    SSLOptions +stdEnvVars
+    SSLVerifyDepth 2
+    SSLOptions +StdEnvVars
     SSLOptions +ExportCertData
 
 </VirtualHost>
