--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ requires-python = ">=3.11"
 readme = "README.md"
 dependencies = [
     "crispy-bootstrap5~=2025.4",
-    "cryptography>=44.0.1",
-    "django>=5.1.6",
-    "django-crispy-forms~=2.3",
+    "cryptography>=44.0.2",
+    "django>=5.2",
+    "django-crispy-forms~=2.4",
     "django-filter~=25.1",
     "django-stubs>=5.1.3,<6",
     "django-stubs-ext>=5.1.3,<6",
     "django-taggit>=6.1.0,<7",
-    "psycopg>=3.2.4",
-    "psycopg-binary>=3.2.4",
+    "psycopg>=3.2.6",
+    "psycopg-binary>=3.2.6",
     "pyasn1>=0.6.1,<0.7",
     "pyasn1-modules>=0.4.1,<0.5",
     "trustpoint-core>=0.0.5",
@@ -27,26 +27,25 @@ dependencies = [
 dev = [
     "behave-django>=1.5.0",
     "behave>=1.2.7.dev6",
-    "behave-html-pretty-formatter>=1.12.3",
+    "behave-html-pretty-formatter>=1.12.7",
     "devtools>=0.12.2,<0.13",
-    "django-extensions>=3.2.3",
+    "django-extensions>=4.1",
     "docutils-stubs>=0.0.22,<0.0.23",
     "mypy>=1.15.0,<2",
     "furo>=2024.8.6",
     "pillow>=11.0.0,<12",
     "pyopenssl>=25,<26",
-    "pytest>=8.3.4",
-    "pytest-cov>=6.0.0",
-    "pytest-django>=4.10.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pytest-django>=4.11.1",
     "pytest-emoji>=0.2.0",
     "pytest-html>=4.1.1",
     "pytest-md>=0.2.0",
-    "pre-commit>=4.1.0",
-    "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "ruff>=0.11.7",
+    "sphinx>=8.2.3",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
-    "beautifulsoup4>=4.13.3",
+    "beautifulsoup4>=4.13.4",
     "pytest-md-report>=0.6.3",
 ]
 
@@ -55,26 +54,25 @@ dev = [
 dev = [
     "behave-django>=1.5.0",
     "behave>=1.2.7.dev6",
-    "behave-html-pretty-formatter>=1.12.3",
+    "behave-html-pretty-formatter>=1.12.7",
     "devtools>=0.12.2,<0.13",
-    "django-extensions>=3.2.3",
+    "django-extensions>=4.1",
     "docutils-stubs>=0.0.22,<0.0.23",
     "mypy>=1.15.0,<2",
     "furo>=2024.8.6",
     "pillow>=11.0.0,<12",
     "pyopenssl>=25,<26",
-    "pytest>=8.3.4",
-    "pytest-cov>=6.0.0",
-    "pytest-django>=4.10.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pytest-django>=4.11.1",
     "pytest-emoji>=0.2.0",
     "pytest-html>=4.1.1",
     "pytest-md>=0.2.0",
-    "pre-commit>=4.1.0",
-    "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "ruff>=0.11.7",
+    "sphinx>=8.2.3",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
-    "beautifulsoup4>=4.13.3",
+    "beautifulsoup4>=4.13.4",
     "pytest-md-report>=0.6.3",
 ]
 
