--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ dependencies = [
     "django-stubs>=5.1.3,<6",
     "django-stubs-ext>=5.1.3,<6",
     "django-taggit>=6.1.0,<7",
-    "psycopg>=3.2.4",
-    "psycopg-binary>=3.2.4",
+    "psycopg>=3.2.6",
+    "psycopg-binary>=3.2.6",
     "pyasn1>=0.6.1,<0.7",
     "pyasn1-modules>=0.4.1,<0.5",
     "trustpoint-core>=0.0.5",
@@ -27,27 +27,26 @@ dependencies = [
 dev = [
     "behave-django>=1.5.0",
     "behave>=1.2.7.dev6",
-    "behave-html-pretty-formatter>=1.12.3",
+    "behave-html-pretty-formatter>=1.12.7",
     "devtools>=0.12.2,<0.13",
-    "django-extensions>=3.2.3",
+    "django-extensions>=4.1",
     "docutils-stubs>=0.0.22,<0.0.23",
-    "mypy>=1.15.0,<2",
+    "mypy>=1.15.0",
     "furo>=2024.8.6",
-    "pillow>=11.0.0,<12",
+    "pillow>=11.2.1",
     "pyopenssl>=25,<26",
-    "pytest>=8.3.4",
-    "pytest-cov>=6.0.0",
-    "pytest-django>=4.10.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pytest-django>=4.11.1",
     "pytest-emoji>=0.2.0",
     "pytest-html>=4.1.1",
     "pytest-md>=0.2.0",
-    "pre-commit>=4.1.0",
-    "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "pytest-md-report>=0.6.3",
+    "ruff>=0.11.7",
+    "sphinx>=8.2.3",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
-    "beautifulsoup4>=4.13.3",
-    "pytest-md-report>=0.6.3",
+    "beautifulsoup4>=4.13.4",
 ]
 
 # Optional dependencies used for the pip env created by readthedocs
@@ -55,27 +54,26 @@ dev = [
 dev = [
     "behave-django>=1.5.0",
     "behave>=1.2.7.dev6",
-    "behave-html-pretty-formatter>=1.12.3",
+    "behave-html-pretty-formatter>=1.12.7",
     "devtools>=0.12.2,<0.13",
-    "django-extensions>=3.2.3",
+    "django-extensions>=4.1",
     "docutils-stubs>=0.0.22,<0.0.23",
     "mypy>=1.15.0,<2",
     "furo>=2024.8.6",
-    "pillow>=11.0.0,<12",
+    "pillow>=11.2.1",
     "pyopenssl>=25,<26",
-    "pytest>=8.3.4",
-    "pytest-cov>=6.0.0",
-    "pytest-django>=4.10.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pytest-django>=4.11.1",
     "pytest-emoji>=0.2.0",
     "pytest-html>=4.1.1",
     "pytest-md>=0.2.0",
-    "pre-commit>=4.1.0",
-    "ruff>=0.7.4",
-    "sphinx>=8.1.3,<9",
+    "pytest-md-report>=0.6.3",
+    "ruff>=0.11.7",
+    "sphinx>=8.2.3",
     "sphinxcontrib-plantuml>=0.30",
     "werkzeug>=3.1.3,<4",
-    "beautifulsoup4>=4.13.3",
-    "pytest-md-report>=0.6.3",
+    "beautifulsoup4>=4.13.4",
 ]
 
 [build-system]
@@ -94,8 +92,8 @@ multiline-quotes = "double"
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-    "ANN401",   # Since django makes extensive use of the Any type, we are OK with using it.
-    "COM812",   # Not compatible with the formatter
+    "ANN401", # Since django makes extensive use of the Any type, we are OK with using it.
+    "COM812", # Not compatible with the formatter
     # TODO(AlexHx8472): We should use this in the future:
     "TD003",
 ]
