--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Trustpoint Server Software"
 authors = [{ name = "TrustPoint-Project" }]
 requires-python = ">=3.11"
 readme = "README.md"
+license = { file = "LICENSE" }
+keywords = ["django", "trustpoint", "server"]
+
 dependencies = [
     "crispy-bootstrap5~=2025.4",
     "cryptography>=44.0.1",
@@ -22,31 +25,34 @@ dependencies = [
     "zeroconf>=0.146,<0.147",
 ]
 
-# Dev dependencies only used in a local environment.
 [dependency-groups]
+# For development: testing, linting, type-checking
 dev = [
-    "behave-django>=1.5.0",
-    "behave>=1.2.7.dev6",
-    "behave-html-pretty-formatter>=1.12.7",
-    "devtools>=0.12.2,<0.13",
-    "django-extensions>=4.1",
-    "docutils-stubs>=0.0.22,<0.0.23",
-    "mypy>=1.15.0",
-    "furo>=2024.8.6",
-    "pillow>=11.2.1",
-    "pyopenssl>=25,<26",
-    "pytest>=8.3.5",
-    "pytest-cov>=6.1.1",
-    "pytest-django>=4.11.1",
-    "pytest-emoji>=0.2.0",
-    "pytest-html>=4.1.1",
-    "pytest-md>=0.2.0",
-    "pytest-md-report>=0.6.3",
-    "ruff>=0.11.7",
-    "sphinx>=8.2.3",
-    "sphinxcontrib-plantuml>=0.30",
-    "werkzeug>=3.1.3,<4",
-    "beautifulsoup4>=4.13.4",
+    "pytest >= 8.3.5",
+    "pytest-cov >= 6.1.1",
+    "pytest-django >= 4.11.1",
+    "pytest-emoji >= 0.2.0",
+    "pytest-html >= 4.1.1",
+    "pytest-md >= 0.2.0",
+    "pytest-md-report >= 0.6.3",
+    "behave >= 1.2.7.dev6",
+    "behave-django >= 1.5.0",
+    "behave-html-pretty-formatter >= 1.12.7",
+    "devtools >= 0.12.2, < 0.13",
+    "django-extensions >= 4.1",
+    "docutils-stubs >= 0.0.22, < 0.0.23",
+    "pyopenssl >= 25, < 26",
+    "werkzeug >= 3.1.3, < 4",
+    "beautifulsoup4 >= 4.13.4",
+    "ruff >= 0.11.7",
+    "mypy >= 1.15.0",
+]
+# For building docs
+docs = [
+    "sphinx >= 8.2.3",
+    "sphinxcontrib-plantuml >= 0.30",
+    "furo >= 2024.8.6",
+    "pillow >= 11.2.1",
 ]
 
 [build-system]
