--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,8 @@ media/
 trustpoint/media/*
 !trustpoint/media/log/.gitkeep
 
-migrations/
+**/migrations/*
+!**/migrations/__init__.py
 
 .python-version
 
