Fix ruff action.

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -15,7 +15,7 @@ jobs:
         uses: ./.github/actions/setup-uv-action  # Call the reusable setup step.
 
       - name: Run Ruff Linting
-        run: ruff check .
+        run: uv run ruff check .
 
       - name: Upload Ruff Logs
         if: failure()  # Only upload logs if the step fails.
