--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ name = "trustpoint"
 version = "0.2.0"
 description = "Trustpoint Server Software"
 authors = [{ name = "TrustPoint-Project" }]
-requires-python = "~=3.12"
+requires-python = "==3.12.*"
 readme = "README.md"
 license = { file = "LICENSE" }
 keywords = ["django", "trustpoint", "server"]
 
 dependencies = [
     "crispy-bootstrap5~=2025.4",
-    "cryptography>=44.0.1",
+    "cryptography>=44.0.3",
     "django>=5.1.6",
     "django-crispy-forms~=2.3",
     "django-filter~=25.1",
@@ -45,7 +45,7 @@ dev = [
     "pyopenssl >= 25, < 26",
     "werkzeug >= 3.1.3, < 4",
     "beautifulsoup4 >= 4.13.4",
-    "ruff >= 0.11.7",
+    "ruff >= 0.11.8",
     "mypy >= 1.15.0",
 ]
 # For building docs
