--- a/docker/apache/trustpoint-http-init.conf
+++ b/docker/apache/trustpoint-http-init.conf
@@ -5,6 +5,7 @@
 
     WSGIDaemonProcess trustpoint python-home=/var/www/html/trustpoint/.venv python-path=/var/www/html/trustpoint/trustpoint/ lang='en_US.UTF-8' locale='en_US.UTF-8'
     WSGIProcessGroup trustpoint
+    WSGIApplicationGroup %{GLOBAL}
 
     Alias /static "/var/www/html/trustpoint/trustpoint/collected_static"
 
