--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "cryptography>=44.0.1",
     "django>=5.1.6",
     "django-crispy-forms~=2.3",
+    "django-dbbackup>=4.2.1",
     "django-filter~=25.1",
     "django-stubs>=5.1.3,<6",
     "django-stubs-ext>=5.1.3,<6",
