--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dev = [
     "beautifulsoup4 >= 4.13.4",
     "ruff >= 0.11.8",
     "mypy >= 1.15.0",
+    "allure-behave>=2.14.2",
+    "allure-pytest>=2.14.2",
 ]
 # For building docs
 docs = [
