--- a/.github/workflows/comprehensive_test_report.yml
+++ b/.github/workflows/comprehensive_test_report.yml
@@ -21,7 +21,7 @@ jobs:
           --cov=trustpoint \
           --cov-report=xml:reports/coverage/coverage.xml \
           --alluredir=reports/allure-results/unit \
-          --junitxml=reports/junit/pytest.xml
+          --junitxml=reports/junit/pytest.xml \
           trustpoint/ 
           
       - name: Upload unit test results
