Add checkout step again.

--- a/.github/workflows/comprehensive_test_report.yml
+++ b/.github/workflows/comprehensive_test_report.yml
@@ -62,6 +62,9 @@ jobs:
       - generate-bdd-test-results
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: Get Allure history
         uses: actions/checkout@v4
         if: always()
