add keys to action

--- a/.github/workflows/comprehensive_test_report.yml
+++ b/.github/workflows/comprehensive_test_report.yml
@@ -106,6 +106,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages # default
+          publish_dir: allure-history
+          allow_empty_commit: true
