--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dev = [
     "beautifulsoup4 >= 4.13.4",
     "ruff >= 0.11.8",
     "mypy >= 1.15.0",
+    "requests >= 2.32.3",
 ]
 # For building docs
 docs = [
