--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ dependencies = [
     "django~=5.1.8",
     "django-crispy-forms~=2.3",
     "django-filter~=25.1",
-    "django-stubs>=5.1.3,<6",
-    "django-stubs-ext>=5.1.3,<6",
+    "django-stubs>=5.2.0",
+    "django-stubs-ext>=5.2.0",
     "django-taggit>=6.1.0,<7",
     "psycopg>=3.2.6",
     "psycopg-binary>=3.2.6",
