--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ coverage.xml
 .pytest_cache/
 cover/
 behave-report.html
-*/md-report.md
+**/md-report.md
 
 # Translations
 *.mo
@@ -186,4 +186,3 @@ docs/build/
 collected_static
 
 _*.sh
-/md-report.md
