--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "behave-vsc.featuresPath": "${workspaceFolder}/trustpoint/features"
+    "behave-vsc.featuresPath": "${workspaceFolder}/trustpoint/features",
+
+    // Tell ruff-vscode to prefer your environment over its bundle
+    "ruff.importStrategy": "fromEnvironment",
+
+    "mypy-type-checker.importStrategy": "fromEnvironment",
+    
+    "ruff.interpreter": [
+        "${workspaceFolder}/.venv/bin/python"  // on Unix/macOS
+    ],
+
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.terminal.activateEnvironment": true
 }
