Run all CI/CD pipelines on pushes to main

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,7 +1,11 @@
 name: MyPy
 
 # Trigger this workflow on pull requests, ensuring type checks are performed before merging.
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   mypy:
